bk_ida/gobmkida/c1/initialize_supplementary_dragon_data
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/initialize_supplementary_dragon_data/src/engine/dragon.c:1263:14: error: expected expression
*( ( _OWORD *)v10 - 2) = xmmword_4888C0; 
             ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/initialize_supplementary_dragon_data/src/engine/dragon.c:1263:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)v10 - 2) = xmmword_4888C0; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/initialize_supplementary_dragon_data/src/engine/dragon.c:1263:26: error: use of undeclared identifier 'xmmword_4888C0'
*( ( _OWORD *)v10 - 2) = xmmword_4888C0; 
                         ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/initialize_supplementary_dragon_data/src/engine/dragon.c:1266:12: error: expected expression
*( _OWORD *)( v10 + 4) = xmmword_4888D0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/initialize_supplementary_dragon_data/src/engine/dragon.c:1266:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v10 + 4) = xmmword_4888D0; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/initialize_supplementary_dragon_data/src/engine/dragon.c:1266:26: error: use of undeclared identifier 'xmmword_4888D0'
*( _OWORD *)( v10 + 4) = xmmword_4888D0; 
                         ^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/initialize_supplementary_dragon_data/src/obj/1/dragon.o] Error 1
